<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.login_fragments.SignInFragment"
    android:gravity="center_vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/sign_in_header"
        android:textSize="24sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sign_up_guidance"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="16sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/singUpNameTIL"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:boxStrokeWidthFocused="0dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpSurnameTIL"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:boxStrokeWidthFocused="0dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpSurnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_hint"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailTIL"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:boxStrokeWidthFocused="0dp"
        app:errorContentDescription="email tipi yanlıştır"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordTIL"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="0dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUpPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/register_continue"
        android:textSize="20sp"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/sign_in_or"
            android:textColor="?attr/colorOutline"
            android:textSize="16sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInWithGoogleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        android:text="@string/sign_in_with_google"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="20sp"
        app:backgroundTint="?attr/colorSurfaceVariant"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:icon="@drawable/icons_google"
        app:iconTint="@null"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        />





</LinearLayout>