<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.app_fragments.PortfolioFragment"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/portfolio_bottom_navigation"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:textFontWeight="700"
        />
    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:id="@+id/viewPager"/>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:id="@+id/tablayout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:tabGravity="center"
        android:padding="0dp"
        android:layout_marginBottom="20dp"
        app:tabPaddingTop="0dp"
        app:tabPaddingBottom="0dp"
        app:tabMinWidth="0dp"
        app:tabMaxWidth="0dp"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorColor="?attr/colorPrimary"
        app:tabBackground="@null"
        />
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->
<!--        <com.google.android.material.imageview.ShapeableImageView-->
<!--            android:layout_width="64dp"-->
<!--            android:layout_height="64dp"-->
<!--            android:src="@drawable/portfolio_icon"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:tint="?attr/colorOnSurface"-->
<!--            />-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:paddingVertical="10dp"-->
<!--            >-->
<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/portfolio_fragment_total_amount"-->
<!--                android:textSize="18sp"-->
<!--                android:id="@+id/totalAmountTextView"-->
<!--                android:textFontWeight="700"-->
<!--                />-->
<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:text="$34,567.89"-->
<!--                android:textSize="18sp"-->
<!--                android:id="@+id/totalAmountValueTextView"-->
<!--                />-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@style/Widget.Material3.Button.IconButton"-->
<!--                app:icon="@drawable/visibility_icon"-->
<!--                app:iconTint="?attr/colorOnSurface"-->
<!--                android:gravity="center"-->
<!--                android:id="@+id/totalAmountVisibilityButton"-->
<!--                />-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginTop="8dp"
        style="@style/portfolioFragmentCardViewStyle"
        app:shapeAppearanceOverlay="@style/portfolioFragmentCardViewShape"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/portfolio_fragment_investments_text_asset"
                    android:id="@+id/assetTextView"
                    android:gravity="center"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/portfolio_fragment_investments_text_price"
                    android:id="@+id/priceTextView"
                    android:gravity="center"
                    />
                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="1dp"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/portfolio_fragment_investments_text_TotalPrice"
                    android:id="@+id/TotalAssetPriceTextView"
                    android:gravity="center"
                    />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/investmentsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/portfolio_fragment_add_investment_button"
        android:id="@+id/addInvestmentButton"
        app:icon="@drawable/add_icon"
        android:layout_marginVertical="6dp"
        />




</LinearLayout>